Phone valdiation added via JavaScript

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div>
                 <label for="number">PHONE NUMBER</label>
-                <input type="tel" name="contact-info" id="number" required>
+                <input type="tel" name="contact-info" id="number" pattern="^\d{10}$" required>
             </div>
             <div>
                 <label for="password">PASSWORD</label>
