Email validation updated

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             </div>
             <div>
                 <label for="email">EMAIL</label>
-                <input type="email" name="contact-info" id="email" required>
+                <input type="email" name="contact-info" id="email" placeholder="email@address.com"required>
             </div>
             <div>
                 <label for="number">PHONE NUMBER</label>
-                <input type="tel" name="contact-info" id="number" pattern="^\d{10}$" required>
+                <input type="tel" name="contact-info" id="number" pattern="^\d{10}$" placeholder="XXX XXX XXXX" required>
             </div>
             <div>
                 <label for="password">PASSWORD</label>
